# quadratic_equasion_2

./: CMakeLists.txt  main.c  qesolver.c  qesolver.h  readme.md  unitests.c  unitests.h
